# SecIoT

./: .gitignore  README.md
Docs/: ~$物联网平台-设备网关介入服务-zhangbin-20200702.pptx  物联网平台-设备网关介入服务-zhangbin-20200702.pptx
GWServer/: README.md
GWServer/etc/: settings.yaml
GWServer/src/: main.py  mantis  start-server.sh
GWServer/src/handlers/: service.py
GWServer/src/static/js/: app.js
GWServer/src/tb/: transport_pb2.py
GWServer/src/templates/: index.html
GWServer/tests/: init-data.yaml  test-protobuf.py
PapioMonkey/: CMakeLists.txt  Controller.cpp  Controller.h  Makefile.arm  SensorHub.h  app.cpp  app.h  base.h  connection.h  sensor.cpp  service.h  settings.txt  utils.cpp  utils.h  version.h
SparkCow/: CMakeLists.txt  Connector.cpp  Controller.cpp  Direction.cpp  Direction.h  DirectionIn.h  DirectionOut.h  ManagedAgent.cpp  UserSecChannel.cpp  UserSecChannel.h  app.cpp  app.h  logger.h  sdf-impl.h  sdf-utils.cpp  sdf-utils.h  sensor.h  settings.txt  utils.h
SparkCow/.svn/: wc.db
SparkCow/GM50/: CMakeLists.txt  attribute.h  base.h  bytearray.h  envelope.cpp  envelope.h  error.h  gm0006.h  message.cpp  sechannel.cpp  sechannel.h  serialize.h  test.cpp  utils.h
SparkCow/GM50/apps/: ComplianceTest.cpp  ComplianceTest.h  RemoteMaintenance.h  RemoteMonitor.h  UserAppJsonMessage.cpp
SparkCow/SDF/: base_type.h  sdf.h  sdf_dev_manage.h  sdf_type.h
SparkCow/SDK/: ContextConnection.cpp  Controller.cpp  InProcConnector.cpp  InProcDirectionIn.cpp  SDKDeviceManagementImpl.h
SparkCow/Tools/: CMakeLists.txt  main.cpp
SparkCow/bundles/: ComplianceTestImpl.h  DeviceManagementImpl.cpp  RemoteMaintenaceImpl.cpp  RemoteMaintenaceImpl.h  SecKeyManagementImpl.cpp  SecKeyManagementImpl.h  VpnManagementImpl.cpp  base.h
SparkCow/sample/: CMakeLists.txt  settings.txt
pythonlibs/mantis/: README.md  requirements.txt
pythonlibs/mantis/fundamental/application/: app.py
pythonlibs/mantis/fundamental/flask/: service.py
pythonlibs/mantis/fundamental/kafka/: broker.py
pythonlibs/mantis/fundamental/redis/: broker.py
pythonlibs/mantis/fundamental/utils/: useful.py
pythonlibs/mantis/templates/webapp/src/: main.py
pythonlibs/mantis/templates/webapp/src/templates/: index.html  main.html  orders.html
pythonlibs/mantis/yinlian/iot/: constants.py  message.py  model.py  mx.py
pythonlibs/mantis/yinlian/iot/tb/: transport.proto
